--- a/styling.css
+++ b/styling.css
@@ -44,7 +44,7 @@ p {
 .info {
     text-align: center;
     padding-top: 30px;
-    background: url(background.jpg) no-repeat center center/cover; 
+    background: url(C:\Users\tashw\OneDrive\Documents\GitHub\tashw96.github.io\backgroundfaded.jpg) no-repeat center center/cover; 
 
 }
 
