--- a/styling.css
+++ b/styling.css
@@ -45,6 +45,8 @@ p {
     text-align: center;
     padding-top: 30px;
     background: url(backgroundfaded.jpg) no-repeat center center/cover;
+    max-width: 100%;
+    position: relative;
    
 
 }
