--- a/personalinterests.css
+++ b/personalinterests.css
@@ -18,7 +18,7 @@ img {
     padding: 2px;
     margin: 5px;
     text-align: center;
-    background: url(backgroundfaded.jpg) no-repeat center center/cover; 
+    background: url("media/backgroundfaded.jpg") no-repeat center center/cover;
     
 }
 
