--- a/styling.css
+++ b/styling.css
@@ -44,7 +44,7 @@ p {
 .info {
     text-align: center;
     padding-top: 30px;
-    background: url(backgroundfaded.jpg) no-repeat center center/cover;
+    background: url("media/backgroundfaded.jpg") no-repeat center center/cover;
     max-width: 100%;
     position: relative;
    
