--- a/styling.css
+++ b/styling.css
@@ -5,7 +5,7 @@ font-family: 'Open Sans Condensed', sans-serif; */
 
 
 
-.titlecontainer{
+.title-container{
     display:flex;
     justify-content:space-between;
     background-color:  #ffc83b;
