--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -1,3 +1,4 @@
+/* Default styles; mobile-first */
 * {
     font-family: 'Open Sans Condensed', sans-serif;
 }
@@ -7,12 +8,12 @@ h1 {
 }
 
 h2 {
-    font-size: 6rem;
+    font-size: 2rem;
     margin-top: 0;
 }
 
 p {
-    font-size: 4rem;
+    font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 0;
 }
@@ -28,11 +29,11 @@ p {
 .title {
     font-family: 'PT Sans', sans-serif;
     margin: 0 auto;
-    font-size: 5rem;
+    font-size: 2rem;
 }
 
 .section-1 {
-    height: 30rem;
+    height: 12rem;
     background: url("../media/backgroundfaded.jpg") no-repeat center center/cover;
     display: flex;
     align-items: center;
@@ -40,21 +41,58 @@ p {
 }
 
 .me {
-    max-height: 25rem;
-    max-width: 25rem;
+    height: 10rem;
+    width: 10rem;
     border-radius: 50%;
 }
 
 .section-2 {
     text-align: center;
-    padding-left: 3.125rem;
-    padding-right: 3.125rem;
+    padding: 1rem 2rem;
     margin-top: 0.625rem;
     background-color: #F9ECBA;
 }
 
 footer {
     text-align: center;
-    background-color: #ffc83b;
     margin-top: 1rem;
 }
+
+.copyright, .last-updated {
+    background-color: #ffc83b;
+    color: white;
+    padding: 0.25rem;
+}
+
+/* Responsive styles */
+
+@media screen and (min-width: 500px) {
+    .title {
+        font-size: 1.5rem;
+    }
+
+    .section-2 {
+        padding: 1rem 5rem;
+    }
+
+    footer {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .section-1 {
+        height: 15rem;
+    }
+
+    .me {
+        width: 13rem;
+        height: 13rem;
+    }
+
+    .section-2 {
+        padding: 1rem 10rem;
+    }
+}
+
